--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "d3": "^6.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
